# aah.io

./: .gitignore  .travis.yml  Makefile  README.md  aah.io.cabal  aahsite.cabal  about.md  cv.md  index.html  index.md  site.hs  test_serve.sh
blog/: 2012-08-09-gitusage.md  2014-07-09-derecursing-bitonic-sort.md  2014-07-09-what-is-computer-science.md  2014-08-09-thoughts-on-durham.md  2015-04-01-linear-algebra-in-strange-places.md  2015-08-28-linear-algebra-semirings-graph-theory.md
code/: brainfuck-interpreter.md  dissertation.md
code/source/: bfvm.c
css/: colours.css  colours_arrays.css  style.css  swiss.css  uberwriter.css
inprogress/blog/: 2014-08-12-derecursing-bitonic-sort.md  2015-01-20-lifts-staircases-complexity.md  converting-to-cuda.md  gitusage.md  mixing-CUDA-and-OpenGL.md  thoughts-on-durham.md
js/: background.js
posts/: 2011-05-06-python_imdb.md  2012-08-09-gitusage.md  2013-07-07-mathtest.markdown  2014-07-09-derecursing-bitonic-sort.md
templates/: default.html
templates/blog/: blog.html
templates/code/: code-post.html  code.html
