name:                aahsite
version:             0.1.0.0
synopsis:            Hakyll static site for aah.io
-- description:         
homepage:            aah.io
license:             AllRightsReserved
license-file:        LICENSE
author:              Adam Harries
maintainer:          harries.adam@gmail.com
-- copyright:           
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable site
  main-is:			   site.hs
  -- other-modules:       
  -- other-extensions:    
  build-depends:       base >=4.7 , hakyll >= 4.5.3, old-locale >= 1.0.0.6, filepath >=1.3.0.2
  ghc-options:		   -threaded
  -- hs-source-dirs:      
  default-language:    Haskell2010